copadoAddon/main/default/objects/PF_Epic__c/fields/Actual_Effort_Total_d__c.field-meta.xml
<CustomField>
    <fullName>Actual_Effort_Total_d__c</fullName>
    <label>Actual Effort Total (d)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>