copadoAddon/main/default/objects/PF_Epic__c/fields/Architecture__c.field-meta.xml
<CustomField>
    <fullName>Architecture__c</fullName>
    <label>Architecture - Logic</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>