copadoAddon/main/default/objects/PF_Epic__c/fields/Architecture_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Architecture_Analytics__c</fullName>
    <label>Architecture - Analytics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>