copadoAddon/main/default/objects/PF_Epic__c/fields/Architecture_Data__c.field-meta.xml
<CustomField>
    <fullName>Architecture_Data__c</fullName>
    <label>Architecture - Data</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>