copadoAddon/main/default/objects/PF_Epic__c/fields/Architecture_Integration__c.field-meta.xml
<CustomField>
    <fullName>Architecture_Integration__c</fullName>
    <label>Architecture - Integration</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>