copadoAddon/main/default/objects/PF_Epic__c/fields/Architecture_Other__c.field-meta.xml
<CustomField>
    <fullName>Architecture_Other__c</fullName>
    <label>Architecture - Other</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>