copadoAddon/main/default/objects/PF_Epic__c/fields/Architecture_UI__c.field-meta.xml
<CustomField>
    <fullName>Architecture_UI__c</fullName>
    <label>Architecture UI</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>