copadoAddon/main/default/objects/PF_Epic__c/fields/As_a__c.field-meta.xml
<CustomField>
    <fullName>As_a__c</fullName>
    <label>Actor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>