copadoAddon/main/default/objects/PF_Epic__c/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Works as designed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>