copadoAddon/main/default/objects/PF_Epic__c/fields/Customer_Journey_approved_by__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey_approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Journey approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Journeys1</relationshipName>
    <type>Lookup</type>
</CustomField>