copadoAddon/main/default/objects/PF_Epic__c/fields/Deployed_to_PRD__c.field-meta.xml
<CustomField>
    <fullName>Deployed_to_PRD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployed to PRD</label>
    <type>Checkbox</type>
</CustomField>