copadoAddon/main/default/objects/PF_Epic__c/fields/Design_Activity__c.field-meta.xml
<CustomField>
    <fullName>Design_Activity__c</fullName>
    <label>Current Design Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proof of Concept</fullName>
            </value>
            <value>
                <fullName>Prototyping</fullName>
            </value>
            <value>
                <fullName>Design (UI)</fullName>
            </value>
            <value>
                <fullName>Detailed Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>