copadoAddon/main/default/objects/PF_Epic__c/fields/Implementation_Size__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Size__c</fullName>
    <label>Implementation Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>