copadoAddon/main/default/objects/PF_Epic__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>PF_Epic__c</referenceTo>
    <relationshipLabel>Parent</relationshipLabel>
    <relationshipName>Customer_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>