copadoAddon/main/default/objects/PF_Epic__c/fields/PF_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>PF_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identify the business user who&#39;s responsible for this epic.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Epics</relationshipName>
    <type>Lookup</type>
</CustomField>