copadoAddon/main/default/objects/PF_Epic__c/fields/PF_Epic_Current_User__c.field-meta.xml
<CustomField>
    <fullName>PF_Epic_Current_User__c</fullName>
    <formula>IF( PF_Assigned_To__r.Id = $User.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <inlineHelpText>Leverage this field to help with filtering list views for those identified in the assigned to field.</inlineHelpText>
    <label>CJ  Current User</label>
    <type>Text</type>
</CustomField>