copadoAddon/main/default/objects/PF_Epic__c/fields/PF_Epic_Number__c.field-meta.xml
<CustomField>
    <fullName>PF_Epic_Number__c</fullName>
    <displayFormat>CJ-{00000}</displayFormat>
    <inlineHelpText>This is the auto-generated identifier.</inlineHelpText>
    <label>CJ Number</label>
    <type>AutoNumber</type>
</CustomField>