copadoAddon/main/default/objects/PF_Epic__c/fields/PF_FW_Capability__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_Capability__c</fullName>
    <label>Capability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-on-one Renewal</fullName>
                <default>true</default>
                <label>One-on-one Renewal</label>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Booster Kit</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Car Inventory</fullName>
            </value>
            <value>
                <fullName>Car Matches</fullName>
            </value>
            <value>
                <fullName>Contract Inventory</fullName>
            </value>
            <value>
                <fullName>Contract Matches</fullName>
            </value>
            <value>
                <fullName>Customer Account</fullName>
            </value>
            <value>
                <fullName>Customer Matches</fullName>
            </value>
            <value>
                <fullName>Dealer Inventive</fullName>
            </value>
            <value>
                <fullName>Dynamic Pricing</fullName>
            </value>
            <value>
                <fullName>Enumerations Cases</fullName>
            </value>
            <value>
                <fullName>Financial Products</fullName>
            </value>
            <value>
                <fullName>Matchmaking</fullName>
            </value>
            <value>
                <fullName>Mobility Roles</fullName>
            </value>
            <value>
                <fullName>Opportunity Order</fullName>
            </value>
            <value>
                <fullName>Platform Automation</fullName>
            </value>
            <value>
                <fullName>Process Forecast</fullName>
            </value>
            <value>
                <fullName>Recommendations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>