copadoAddon/main/default/objects/PF_Epic__c/fields/PF_FW_CJ_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_CJ_Estimated_Hours__c</fullName>
    <description>Estimated Hours</description>
    <label>Estimated Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>