copadoAddon/main/default/objects/PF_Epic__c/fields/PF_FW_CJ_Foundation_Feature__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_CJ_Foundation_Feature__c</fullName>
    <label>Foundation/Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>