copadoAddon/main/default/objects/PF_Epic__c/fields/PF_FW_CJ_Status__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_CJ_Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>In Roadmap Prioritization</fullName>
            </value>
            <value>
                <fullName>In Business Design</fullName>
                <label>In Design</label>
            </value>
            <value>
                <fullName>Prototype needed</fullName>
                <label>Prototyping</label>
            </value>
            <value>
                <fullName>In Detail Design</fullName>
            </value>
            <value>
                <fullName>In Solution Design</fullName>
                <label>Architecture Authorization</label>
            </value>
            <value>
                <fullName>VWFS Approval</fullName>
            </value>
            <value>
                <fullName>Sprint Backlog</fullName>
                <label>User Story Creation</label>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>