copadoAddon/main/default/objects/PF_Epic__c/fields/PF_FW_CJ_Strategic_Theme__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_CJ_Strategic_Theme__c</fullName>
    <label>Strategic Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Loyalty</fullName>
            </value>
            <value>
                <fullName>Dealer Enumeration</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>Dynamic Pricing</fullName>
            </value>
            <value>
                <fullName>Flexible Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>