copadoAddon/main/default/objects/PF_Epic__c/fields/PF_FW_Cloud__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_Cloud__c</fullName>
    <label>Cloud</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Fast Track</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>MuleSoft</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>