copadoAddon/main/default/objects/PF_Epic__c/fields/PF_FW_Customer_Experience__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_Customer_Experience__c</fullName>
    <label>Customer Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>