copadoAddon/main/default/objects/PF_Epic__c/fields/PF_FW_Evolution_Version__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_Evolution_Version__c</fullName>
    <description>Version of the actual Evolution</description>
    <inlineHelpText>Version of the actual Evolution</inlineHelpText>
    <label>Evolution Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>v1</fullName>
                <default>true</default>
                <label>v1</label>
            </value>
            <value>
                <fullName>v2</fullName>
            </value>
            <value>
                <fullName>v3</fullName>
            </value>
            <value>
                <fullName>v4</fullName>
            </value>
            <value>
                <fullName>v5</fullName>
            </value>
            <value>
                <fullName>v6</fullName>
            </value>
            <value>
                <fullName>v7</fullName>
            </value>
            <value>
                <fullName>v8</fullName>
            </value>
            <value>
                <fullName>v9</fullName>
            </value>
            <value>
                <fullName>v10</fullName>
            </value>
            <value>
                <fullName>v11</fullName>
            </value>
            <value>
                <fullName>v12</fullName>
            </value>
            <value>
                <fullName>v13</fullName>
            </value>
            <value>
                <fullName>v14</fullName>
            </value>
            <value>
                <fullName>v15</fullName>
            </value>
            <value>
                <fullName>v16</fullName>
            </value>
            <value>
                <fullName>v17</fullName>
            </value>
            <value>
                <fullName>v18</fullName>
            </value>
            <value>
                <fullName>v19</fullName>
            </value>
            <value>
                <fullName>v20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>