copadoAddon/main/default/objects/PF_Epic__c/fields/PF_Product__c.field-meta.xml
<CustomField>
    <fullName>PF_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the relevant product this epic is associated to.</inlineHelpText>
    <label>Product</label>
    <referenceTo>PF_Product__c</referenceTo>
    <relationshipName>Epics</relationshipName>
    <type>Lookup</type>
</CustomField>