copadoAddon/main/default/objects/PF_Epic__c/fields/Planned_Effort_Total_d__c.field-meta.xml
<CustomField>
    <fullName>Planned_Effort_Total_d__c</fullName>
    <label>Planned Effort Total (d)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>