copadoAddon/main/default/objects/PF_Epic__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Implementation Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>