copadoAddon/main/default/objects/PF_Epic__c/fields/So_that__c.field-meta.xml
<CustomField>
    <fullName>So_that__c</fullName>
    <label>Journey End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>