copadoAddon/main/default/objects/PF_Epic__c/fields/UAT_approved_by__c.field-meta.xml
<CustomField>
    <fullName>UAT_approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UAT approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Journeys2</relationshipName>
    <type>Lookup</type>
</CustomField>