copadoAddon/main/default/objects/PF_Epic__c/fields/Want_to__c.field-meta.xml
<CustomField>
    <fullName>Want_to__c</fullName>
    <label>Journey Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>