copadoAddon/main/default/objects/PF_Epic__c/recordTypes/PF_Epic.recordType-meta.xml
<RecordType>
    <fullName>PF_Epic</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>CJ</label>
</RecordType>