copadoAddon/main/default/objects/PF_Epic__c/validationRules/DeployToPRD.validationRule-meta.xml
<ValidationRule>
    <fullName>DeployToPRD</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(PF_FW_CJ_Status__c, &#39;UAT&#39;)) &amp;&amp; NOT(ISPICKVAL(PF_FW_CJ_Status__c, &#39;Completed&#39;)) &amp;&amp;  Deployed_to_PRD__c = TRUE</errorConditionFormula>
    <errorMessage>You can deploy to PRD only after UAT</errorMessage>
</ValidationRule>