copadoAddon/main/default/objects/PF_Epic__c/listViews/All_PF_Users_PF_Epic.listView-meta.xml
<ListView>
    <fullName>All_PF_Users_PF_Epic</fullName>
    <filterScope>Queue</filterScope>
    <label>All PF Users</label>
    <queue>All_PF_Users</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>