copadoAddon/main/default/objects/PF_Epic__c/listViews/PF_All_Epics_Assigned_To_Me.listView-meta.xml
<ListView>
    <fullName>PF_All_Epics_Assigned_To_Me</fullName>
    <columns>NAME</columns>
    <columns>PF_Epic_Number__c</columns>
    <columns>PF_Epic_Description__c</columns>
    <columns>PF_Assigned_To__c</columns>
    <columns>PF_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PF_Epic_Current_User__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>All Customer Journeys Assigned To Me</label>
</ListView>