copadoAddon/main/default/objects/PF_Epic__c/listViews/Project_Lead_Team_PF_Epic.listView-meta.xml
<ListView>
    <fullName>Project_Lead_Team_PF_Epic</fullName>
    <filterScope>Queue</filterScope>
    <label>PwC Project Leads</label>
    <queue>Project_Lead_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>