copadoAddon/main/default/objects/PF_Epic__c/listViews/PwC_Architect_PF_Epic.listView-meta.xml
<ListView>
    <fullName>PwC_Architect_PF_Epic</fullName>
    <filterScope>Queue</filterScope>
    <label>PwC Architect</label>
    <queue>PwC_Architect</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>