copadoAddon/main/default/objects/PF_Epic__c/listViews/PwC_Business_Analyst_PF_Epic.listView-meta.xml
<ListView>
    <fullName>PwC_Business_Analyst_PF_Epic</fullName>
    <filterScope>Queue</filterScope>
    <label>PwC Business/Solution Design</label>
    <queue>PwC_Business_Analyst</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>