copadoAddon/main/default/objects/PF_Epic__c/listViews/VWFS_Approval_PF_Epic.listView-meta.xml
<ListView>
    <fullName>VWFS_Approval_PF_Epic</fullName>
    <filterScope>Queue</filterScope>
    <label>VWFS Approval</label>
    <queue>VWFS_Approval</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>