copadoAddon/main/default/objects/PF_Epic__c/listViews/VWFS_UAT_PF_Epic.listView-meta.xml
<ListView>
    <fullName>VWFS_UAT_PF_Epic</fullName>
    <filterScope>Queue</filterScope>
    <label>VWFS UAT</label>
    <queue>VWFS_UAT</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>